--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,9 +32,5 @@ jobs:
 
       - name: Run tests with coverage
         run: |
-          pytest --maxfail=1 --disable-warnings --cov=app --cov-report=xml
-
-      - name: Run tests with coverage
-        run: |
-          pytest --maxfail=1 --disable-warnings --cov=app
+          pytest --maxfail=1 --disable-warnings --cov=app --cov-report=term --cov-report=xml
           coverage report --fail-under=100
