--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,36 +1,21 @@
-name: Python CI
-
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
+name: Python application
+on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.13'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pytest pytest-cov
-
-      - name: Add app to PYTHONPATH
-        run: |
-          echo "PYTHONPATH=$(pwd)" >> $GITHUB_ENV
-
-      - name: Run tests with coverage
-        run: |
-          pytest --maxfail=1 --disable-warnings \
-                 --cov=app --cov-report=term --cov-report=xml \
-                 --cov-fail-under=100
+    - uses: actions/checkout@v2
+    - name: Setup Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.10'
+    - name: Install deps
+      run: |
+        python -m pip install --upgrade pip
+        pip install pytest pytest-cov pandas python-dotenv
+    - name: Run tests with coverage
+      run: |
+        pytest --cov=app tests/
+    - name: Check coverage
+      run: |
+        coverage report --fail-under=100
