--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -9,10 +9,10 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.10'
-    - name: Install deps
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest pytest-cov pandas python-dotenv
+        pip install pytest pytest-cov pandas python-dotenv PyYAML
     - name: Run tests with coverage
       run: |
         pytest --cov=app tests/
